feat: 오픈더도어 UI 구현

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/santa.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>I'm 산타에요 🎅🏻</title>
   </head>
   <body className="bg-primary">
     <div id="root"></div>
